--- a/assets/style.css
+++ b/assets/style.css
@@ -194,6 +194,7 @@ justify-content: center;
   align-items: center;
   height: auto;
   text-align: center;
+  justify-content: center;
 }
 .CP img {
   width: 30px;
@@ -201,7 +202,12 @@ justify-content: center;
 .CP-AP div img{
 margin: auto;
 }
-
+.sass{
+  height: 30px;
+  background-color: rgba(213, 110, 163);
+  border-radius: 5px;
+  padding: 2px;
+}
 /* Carrousel */
 #carrousel {
   height: 83vh;
